--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -2009,20 +2009,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "nbpresent": {
      "id": "b5da9419-3170-4764-8024-ec6b6d692959"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicatessen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Segment 0</th>\n",
+       "      <td>6079.0</td>\n",
+       "      <td>7042.0</td>\n",
+       "      <td>10241.0</td>\n",
+       "      <td>1275.0</td>\n",
+       "      <td>3546.0</td>\n",
+       "      <td>1159.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Segment 1</th>\n",
+       "      <td>8967.0</td>\n",
+       "      <td>1920.0</td>\n",
+       "      <td>2437.0</td>\n",
+       "      <td>2081.0</td>\n",
+       "      <td>309.0</td>\n",
+       "      <td>741.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Fresh    Milk  Grocery  Frozen  Detergents_Paper  Delicatessen\n",
+       "Segment 0  6079.0  7042.0  10241.0  1275.0            3546.0        1159.0\n",
+       "Segment 1  8967.0  1920.0   2437.0  2081.0             309.0         741.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# TODO: Inverse transform the centers\n",
-    "log_centers = None\n",
+    "log_centers = pca.inverse_transform(centers)\n",
     "\n",
     "# TODO: Exponentiate the centers\n",
-    "true_centers = None\n",
+    "true_centers = np.exp(log_centers)\n",
     "\n",
     "# Display the true centers\n",
     "segments = ['Segment {}'.format(i) for i in range(0,len(centers))]\n",
