Fix: Interpretation of R^2

--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -446,7 +446,7 @@
    },
    "source": [
     "**Answer:**\n",
-    "Tried all features to predict and detergents_paper reported the maximum score of 0.728655181254. As this feature scores most means it is the best for identifying customer segments."
+    "Among all feature, removing detergents_paper scores model highest 0.7287. It means that detergents_paper is least important feature in predicting customer spending habit and most of its information is coverd in other four feaures."
    ]
   },
   {
