Fix: Description of Distributioin Question 3

--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -610,7 +610,9 @@
     "This scatter plot and table of pearsons r correlation table indicates that \n",
     "Milk Groceory and ditergents_paper are highly corellated.\n",
     "This correlation deny about relavance of detergents_paper which was selected to predict.\n",
-    "\n"
+    "\n",
+    "Data for Milk, detergents_paper and Grocery are all positively skewed in which mode>median>mean.\n",
+    "Apart from that other features also skewed positively."
    ]
   },
   {
