Fix: Tukey outliers are justified in Q.4

--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -862,8 +862,10 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "Outliers detected using IQR. Followings are outliers occuring in more than one feature that should be removed.\n",
-    "[(154, 3), (128, 2), (65, 2), (66, 2), (75, 2)]"
+    "According to IQR  we are expanding rang removal of datapoint by 1.5, it means that datapoints beyond IRQ are not considered outlier but datapoints listed here are 1.5 times IQR away that is why they are considerd outliers. Those five points are as below.\n",
+    "[(154, 3), (128, 2), (65, 2), (66, 2), (75, 2)]\n",
+    "\n",
+    "Outliers detected using IQR X 1.5. Followings are outliers occuring in more than one feature that should be removed."
    ]
   },
   {
